# ha-hydronicus

./: .gitignore  .pre-commit-config.yaml  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  conftest.py  hacs.json  pyproject.toml
.agents/skills/hydronic-climate-verify/: SKILL.md
.agents/skills/hydronic-climate-verify/agents/: openai.yaml
.github/ISSUE_TEMPLATE/: diagnostic-bug-report.md
.github/workflows/: ci.yml  release.yml  validate.yml
custom_components/hydronic_climate/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  entry_configuration.py  manifest.json  runtime.py  sensor.py  strings.json
custom_components/hydronic_climate/core/: __init__.py  configuration.py  controller.py  model.py  topology.py
custom_components/hydronic_climate/translations/: en.json
custom_components/hydronicus/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  diagnostics.py  entry_configuration.py  manifest.json  migration.py  presentation.py  repairs.py  runtime.py  select.py  sensor.py  strings.json  websocket.py
custom_components/hydronicus/core/: configuration.py  controller.py  entity_bindings.py  executor.py  model.py  topology.py
custom_components/hydronicus/frontend/: hydronicus-plant-card.js
custom_components/hydronicus/translations/: en.json
docs/: configuration.md  development.md  home-server-staging.md  how-it-works.md  implementation-plan.md  lovelace.md  safety.md  topology.md  troubleshooting.md  upgrade-and-rollback.md
docs/evidence/: large-plant-benchmark.md  public-beta-installation-transcript.md
docs/examples/: simulated-entities.yaml
frontend/: build.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/: hydronicus-plant-card.ts  index.ts  logic.ts  types.ts  version.d.ts
frontend/test/: logic.test.ts
scripts/: package_release.py  public_beta_smoke.py
tests/: README.md  __init__.py  conftest.py  test_public_beta.py  test_release_package.py  test_runtime.py
tests/benchmarks/: __init__.py  conftest.py  plant_factory.py  test_large_synthetic_plant.py
tests/core/: __init__.py  conftest.py  test_actuator_feedback.py  test_configuration.py  test_controller.py  test_entity_bindings.py  test_executor.py  test_model.py  test_properties.py  test_source_recommendation.py  test_source_selection.py  test_thermostat_ownership.py  test_topology.py
tests/fixtures/benchmarks/: README.md  large-synthetic-plant.json
tests/fixtures/migrations/: README.md  public-beta-matrix.json  v1-current-topology.json  v1-minor-1-topology.json
tests/integration/: conftest.py  test_actuator_execution.py  test_actuator_subentry.py  test_circuit_subentry.py  test_config_flow.py  test_cooling_shadow.py  test_diagnostics.py  test_external_thermostat.py  test_init.py  test_migration.py  test_presentation.py  test_public_beta.py  test_repairs.py  test_source_subentry.py  test_websocket.py  test_zone_subentry.py
tests/scenarios/: __init__.py  harness.py  test_operating_scenarios.py  test_thermostat_ownership.py
